--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,7 +6,6 @@
     "com.unity.collab-proxy": "2.9.3",
     "com.unity.collections": "2.5.1",
     "com.unity.entities": "1.3.14",
-    "com.unity.entities.graphics": "1.3.2",
     "com.unity.ext.nunit": "2.0.5",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
@@ -29,6 +28,7 @@
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "org.khronos.unitygltf": "https://github.com/KhronosGroup/UnityGLTF.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
