--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/SceneDependencyCache*
 ProjectSettings/EntitiesClientSettings.asset
+TextToolDatas
